--- a/mise.toml
+++ b/mise.toml
@@ -2,6 +2,7 @@
 go = "1.25.4"
 golangci-lint = "v2.5.0"
 helm = "4.0.0"
+goreleaser = "2.12.7"
 
 [settings]
 lockfile = true
@@ -24,3 +25,15 @@ run = [
   "golangci-lint run --config .golangci-lint.yml --fix",
   "diff schema.json internal/config/schema.json"
 ]
+
+[tasks.build]
+description = "Build a local binary"
+run = "go build -o bin/vendor-plugin"
+
+[tasks.release-snapshot]
+description = "Build a snapshot release with goreleaser"
+run = "goreleaser release --snapshot --clean"
+
+[tasks.release-check]
+description = "Check goreleaser configuration"
+run = "goreleaser check"
