--- a/.vendor-charts.yaml
+++ b/.vendor-charts.yaml
@@ -7,12 +7,12 @@ charts:
     insecure: false
 
   - name: prometheus
-    repository: oci://ghcr.io/prometheus-community/charts/prometheus
+    repository: oci://ghcr.io/prometheus-community/charts
     version: 27.45.0
     destination: artifacts/prometheus
 
   - name: cert-manager
     repository: https://charts.jetstack.io
-    version: 1.19.1
+    version: v1.19.1
     verify: true
     destination: artifacts/cert-manager
