--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,7 +10,8 @@ before:
 builds:
   - id: vendor-plugin
     main: ./main.go
-    binary: bin/vendor-plugin
+    binary: bin/vendor-plugin-{{ .Os }}-{{ .Arch }}
+    no_unique_dist_dir: true
     env:
       - CGO_ENABLED=0
     goos:
@@ -31,54 +32,18 @@ builds:
       - -X github.com/Shikachuu/helm-vendor-plugin/cmd.date={{.Date}}
 
 archives:
-  - id: helm-vendor-plugin
-    name_template: >-
-      {{ .ProjectName }}_
-      {{- .Version }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
-    formats:
-      - tar.gz
-    files:
-      - plugin.yaml
-      - LICENSE*
-      - schema.json
+  - formats: [binary]
+    name_template: "{{ .Binary }}"
+    allow_different_binary_count: true
+
+sboms:
+  - artifacts: binary
 
 checksum:
   name_template: "checksums.txt"
 
 snapshot:
   version_template: "{{ incpatch .Version }}-next"
-
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - "^docs:"
-      - "^test:"
-      - "^chore:"
-      - "^ci:"
-      - "merge conflict"
-      - Merge pull request
-      - Merge remote-tracking branch
-      - Merge branch
-  groups:
-    - title: "New Features"
-      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
-      order: 0
-    - title: "Bug Fixes"
-      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
-      order: 1
-    - title: "Performance Improvements"
-      regexp: '^.*?perf(\([[:word:]]+\))??!?:.+$'
-      order: 2
-    - title: "Refactors"
-      regexp: '^.*?refactor(\([[:word:]]+\))??!?:.+$'
-      order: 3
-    - title: "Other Changes"
-      order: 999
 
 release:
   github:
