--- a/.vendor-charts.yaml
+++ b/.vendor-charts.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=./schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/Shikachuu/helm-vendor-plugin/refs/heads/main/schema.json
 charts:
   - name: descheduler
     repository: https://kubernetes-sigs.github.io/descheduler
