--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
+      - name: Set up mise
+        uses: jdx/mise-action@v3
+
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
