--- a/plugin.yaml
+++ b/plugin.yaml
@@ -5,11 +5,15 @@ version: 0.1.0
 runtime: subprocess
 sourceURL: https://github.com/Shikachuu/helm-vendor-plugin
 config:
-  usage: Vendor helps you download and vendor helm charts.
+  usage: vendor [command] -f <file>
   ignoreFlags: false
 runtimeConfig:
-  hooks:
-    install: $HELM_PLUGIN_DIR/hack/install-binary.sh
-    update: $HELM_PLUGIN_DIR/hack/install-binary.sh
+  platformHooks:
+    install:
+      - command: "$HELM_PLUGIN_DIR/hack/install-binary.sh"
+    update:
+      - command: "$HELM_PLUGIN_DIR/hack/install-binary.sh"
   platformCommand:
     - command: $HELM_PLUGIN_DIR/bin/vendor-plugin
+    - os: windows
+      command: ${HELM_PLUGIN_DIR}\bin\vendor-plugin.exe
