--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,10 +33,8 @@ jobs:
       - name: Set up mise
         uses: jdx/mise-action@v3
 
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v9
-        with:
-          version: v2.5.0
+      - name: Lint
+        run: mise lint
 
       - name: Run go mod tidy
         run: go mod tidy
