--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,19 +1,25 @@
 apiVersion: v1
 type: cli/v1
 name: vendor
-version: 0.2.3
+version: 1.0.0
 runtime: subprocess
 sourceURL: https://github.com/Shikachuu/helm-vendor-plugin
 config:
   usage: vendor [command] -f <file>
   ignoreFlags: false
 runtimeConfig:
-  platformHooks:
-    install:
-      - command: "$HELM_PLUGIN_DIR/hack/install-binary.sh"
-    update:
-      - command: "$HELM_PLUGIN_DIR/hack/install-binary.sh"
   platformCommand:
-    - command: $HELM_PLUGIN_DIR/bin/vendor-plugin
+    - os: darwin
+      arch: amd64
+      command: $HELM_PLUGIN_DIR/bin/vendor-plugin-darwin-amd64
+    - os: darwin
+      arch: arm64
+      command: $HELM_PLUGIN_DIR/bin/vendor-plugin-darwin-arm64
+    - os: linux
+      arch: amd64
+      command: $HELM_PLUGIN_DIR/bin/vendor-plugin-linux-amd64
+    - os: linux
+      arch: arm64
+      command: $HELM_PLUGIN_DIR/bin/vendor-plugin-linux-arm64
     - os: windows
-      command: ${HELM_PLUGIN_DIR}\bin\vendor-plugin.exe
+      command: ${HELM_PLUGIN_DIR}\bin\vendor-plugin-amd64.exe
