--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,18 +14,6 @@ builds:
     main: ./main.go
     binary: bin/{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}
     no_unique_dist_dir: true
-    hooks:
-      post:
-        - rm -f dist/config.yaml
-        - cmd: bash hack/helm-package.sh
-          env:
-            - HELM_KEY_PASSPHRASE={{ .Env.HELM_KEY_PASSPHRASE }}
-            - SIGNING_KEY_EMAIL={{ .Env.SIGNING_KEY_EMAIL }}
-            - BIN_PATH={{ .Path }}
-            - BIN_NAME={{ .ProjectName }}
-            - VERSION={{ .Version }}
-            - OS={{ .Os }}
-            - ARCH={{ .Arch }}
     env:
       - CGO_ENABLED=0
     flags:
@@ -68,17 +56,12 @@ release:
   draft: false
   prerelease: auto
   mode: append
-  extra_files:
-    - glob: dist/**.tgz
-    - glob: dist/**.tgz.prov
   header: |
     ## Helm Vendor Plugin {{ .Tag }} ({{ .Date }})
 
     Install or update this plugin using:
     ```bash
-    helm plugin install https://github.com/Shikachuu/helm-vendor-plugin/releases/download/{{ .Tag }}/$(uname -s | tr '[:upper:]' '[:lower:]')-$(uname -m)-{{ .Version }}.tgz
-    # or use an oci compatbile registry
-    helm plugin install oci://ghcr.io/shikachuu/helm-vendor-plugin/$(uname -s | tr '[:upper:]' '[:lower:]')-$(uname -m):{{ .Version }}
+    helm plugin install oci://ghcr.io/shikachuu/helm-vendor-plugin:{{ .Version }}
     # or to update
     helm plugin update vendor
     ```
