--- a/mise.toml
+++ b/mise.toml
@@ -1,11 +1,10 @@
 [tools]
 go = "1.25.4"
 golangci-lint = "v2.5.0"
-helm = "4.0.0"
+helm = "4.0.4"
 goreleaser = "2.12.7"
-syft = "1.38.0"
 oras = "1.3.0"
-grype = "0.104.1"
+trivy = "0.68.2"
 
 [settings]
 lockfile = true
@@ -18,6 +17,10 @@ task_output = "quiet"
 description = "Runs go generate for all files"
 run = "go generate ./..."
 
+[tasks.secu-scan]
+description = "Runs trivy security checks (vulnerability, secret leaks, miss-configs)"
+run = "trivy fs . --scanners vuln,secret"
+
 [tasks.test]
 description = "Run tests"
 run = "go test ./... -cover -race"
@@ -25,8 +28,8 @@ run = "go test ./... -cover -race"
 [tasks.lint]
 description = "Lint golang and protobuf code"
 run = [
-  "golangci-lint run --config .golangci-lint.yml --fix",
-  "diff schema.json internal/config/schema.json",
+    "golangci-lint run --config .golangci-lint.yml --fix",
+    "diff schema.json internal/config/schema.json",
 ]
 
 [tasks.build]
@@ -35,10 +38,7 @@ run = "go build -trimpath -ldflags='-s -w' -o bin/vendor-plugin"
 
 [tasks.release-snapshot]
 description = "Build a snapshot release with goreleaser"
-run = [
-  "goreleaser release --snapshot --clean",
-  "bash hack/helm-package.sh",
-]
+run = ["goreleaser release --snapshot --clean", "bash hack/helm-package.sh"]
 
 [tasks.release-check]
 description = "Check goreleaser configuration"
