--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,12 +3,6 @@ version: 2
 
 project_name: vendor-plugin
 
-before:
-  hooks:
-    - mise lint
-    - mise gogen
-    - mise test
-
 builds:
   - id: vendor-plugin
     main: ./main.go
@@ -56,6 +50,45 @@ checksum:
 
 snapshot:
   version_template: "{{ incpatch .Version }}-next"
+
+changelog:
+  use: git
+  sort: asc
+  filters:
+    exclude:
+      - "^ci:"
+      - "Merge pull request"
+      - "Merge branch"
+  groups:
+    - title: ✨ Features
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+      order: 0
+    - title: 🐛 Bug Fixes
+      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+      order: 1
+    - title: ⚡ Performance Improvements
+      regexp: '^.*?perf(\([[:word:]]+\))??!?:.+$'
+      order: 2
+    - title: ♻️ Code Refactoring
+      regexp: '^.*?refactor(\([[:word:]]+\))??!?:.+$'
+      order: 3
+    - title: 📦 Build System
+      regexp: '^.*?build(\([[:word:]]+\))??!?:.+$'
+      order: 4
+    - title: 📚 Documentation
+      regexp: '^.*?docs(\([[:word:]]+\))??!?:.+$'
+      order: 5
+    - title: ✅ Tests
+      regexp: '^.*?test(\([[:word:]]+\))??!?:.+$'
+      order: 6
+    - title: 🔧 Miscellaneous
+      regexp: '^.*?chore(\([[:word:]]+\))??!?:.+$'
+      order: 7
+    - title: ⏪ Reverts
+      regexp: '^.*?revert(\([[:word:]]+\))??!?:.+$'
+      order: 8
+    - title: Others
+      order: 999
 
 release:
   github:
