fix: update release type and plugin.yaml update
Signed-off-by: Máté Czékus <mate@picloud.hu>

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -1,6 +1,5 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "release-type": "simple",
   "packages": {
     ".": {
       "release-type": "simple",
@@ -21,9 +20,8 @@
       ],
       "extra-files": [
         {
-          "type": "yaml",
-          "path": "plugin.yaml",
-          "jsonpath": "$.version"
+          "type": "generic",
+          "path": "plugin.yaml"
         }
       ],
       "include-component-in-tag": false,
