--- a/mise.toml
+++ b/mise.toml
@@ -22,6 +22,7 @@ description = "Runs trivy security checks (vulnerability, secret leaks, miss-con
 run = "trivy fs . --scanners vuln,secret"
 
 [tasks.test]
+env = { "CGO_ENABLED" = "0" }
 description = "Run tests"
 run = "go test ./... -cover -race"
 
