--- a/mise.toml
+++ b/mise.toml
@@ -24,7 +24,7 @@ run = "trivy fs . --scanners vuln,secret"
 [tasks.test]
 env = { "CGO_ENABLED" = "0" }
 description = "Run tests"
-run = "go test ./... -cover -race"
+run = "go test ./... -cover"
 
 [tasks.lint]
 description = "Lint golang and protobuf code"
