--- a/mise.toml
+++ b/mise.toml
@@ -22,8 +22,9 @@ description = "Runs trivy security checks (vulnerability, secret leaks, miss-con
 run = "trivy fs . --scanners vuln,secret"
 
 [tasks.test]
+env = { "CGO_ENABLED" = "0" }
 description = "Run tests"
-run = "go test ./... -cover -race"
+run = "go test ./... -cover"
 
 [tasks.lint]
 description = "Lint golang and protobuf code"
